<resources>
    <string name="app_name">FootballApp</string>
    <string name="match_preview_text">Match Preview</string>
    <string name="gameweek_3_text">Gameweek 3</string>
    <string name="overview_text">overview</string>
    <string name="statistic_text">Statistic</string>
    <string name="line_up_text">Line up</string>
    <string name="matches_screen_text">Matches</string>
    <string name="top_players_screen">Top Players</string>
    <string name="videos_screen">Videos</string>
    <string name="favorites_screen">Favorites</string>
    <string name="settings_screen">Settings</string>
    <string name="first_half_text">1st half</string>
    <string name="second_half_text">2nd half</string>
    <string name="ball_possession_text">Ball Possession</string>
    <string name="tripping_text">\' Tripping</string>
    <string name="substitution_text">\' Substitution</string>
    <string name="goal_text">\' Goals by</string>
    <string name="own_goal_text">\' Own Goal</string>
</resources>